--- a/dwca_config/dwca_harbourseal_nat.yaml
+++ b/dwca_config/dwca_harbourseal_nat.yaml
@@ -40,9 +40,12 @@ fieldMapping:
     directory:
         dwca_config/field_mapping
     files:
-        - dwca_terms_event.yaml
-        - dwca_terms_occurrence.yaml
-        - dwca_terms_emof.yaml
+        -   - dwca_terms_event.yaml
+            - _SEAL
+        -   - dwca_terms_occurrence.yaml
+            - _SEAL
+        -   - dwca_terms_emof.yaml
+            - _SEAL
 
 taxaWorms:
     directory:
