--- a/dwca_config/dwca_ringedseal_nat.yaml
+++ b/dwca_config/dwca_ringedseal_nat.yaml
@@ -31,9 +31,12 @@ dwcaKeys:
 fieldMapping:
     directory: dwca_config/field_mapping
     files:
-        - dwca_terms_event.yaml
-        - dwca_terms_occurrence.yaml
-        - dwca_terms_emof.yaml
+        -   - dwca_terms_event.yaml
+            - _SEAL
+        -   - dwca_terms_occurrence.yaml
+            - _SEAL
+        -   - dwca_terms_emof.yaml
+            - _SEAL
 
 taxaWorms:
     directory: data_in/resources
@@ -58,6 +61,7 @@ transform:
         dwca_config/transform
     files:
         - transform.yaml
+        - transform_ringedseal.yaml
 
 metadataSourceFiles:
     directory:
