--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pytz>=2025.1",
     "pyyaml>=6.0.2",
     "requests>=2.32.3",
+    "shark-metadata",
 ]
 
 [dependency-groups]
@@ -44,3 +45,5 @@ select = [
     "RUF"
 ]
 
+[tool.uv.sources]
+shark-metadata = { git = "https://github.com/sharkdata/shark-metadata", rev = "for-darwincore" }
