--- a/dwca_config/dwca_zoobenthos_reg_recip_proj.yaml
+++ b/dwca_config/dwca_zoobenthos_reg_recip_proj.yaml
@@ -43,9 +43,11 @@ fieldMapping:
     directory:
         dwca_config/field_mapping
     files:
-        - dwca_terms_event.yaml
+        -   - dwca_terms_event.yaml
+            - _ZB
         - dwca_terms_occurrence.yaml
-        - dwca_terms_emof.yaml
+        -   - dwca_terms_emof.yaml
+            - _ZB
 
 taxaWorms:
     directory:
@@ -73,6 +75,7 @@ transform:
         dwca_config/transform
     files:
         - transform.yaml
+        - transform_zoobenthos.yaml
 
 metadataSourceFiles:
     directory:
