--- a/dwca_config/field_mapping/dwca_terms_emof.yaml
+++ b/dwca_config/field_mapping/dwca_terms_emof.yaml
@@ -51,6 +51,8 @@ dwcaEmofContent:
         sourceKey:
       measurementDeterminedDate_SEAL:
         sourceKey:
+      measurementDeterminedDate_ZB:
+        sourceKey:
       measurementDeterminedBy:
         sourceKey:
       measurementMethod:
@@ -123,6 +125,8 @@ dwcaEmofContent:
       measurementDeterminedDate_IFCB:
         sourceKey:
       measurementDeterminedDate_SEAL:
+        sourceKey:
+      measurementDeterminedDate_ZB:
         sourceKey:
       measurementDeterminedBy:
         sourceKey:
@@ -245,7 +249,7 @@ dwcaEmofContent:
         measurementUnitID:
         sourceKey: sediment_deposition_code
       - measurementType: Sediment type
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/SEDTYCAT/"
         measurementUnit: Not applicable
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX/"
         sourceKey: sediment_type
@@ -362,6 +366,8 @@ dwcaEmofContent:
         sourceKey:
       measurementDeterminedDate_SEAL:
         sourceKey:
+      measurementDeterminedDate_ZB:
+        sourceKey:
       measurementDeterminedBy:
         sourceKey:
       measurementMethod:
@@ -401,19 +407,19 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: mesh_size_um
       - measurementType: Upper mesh size
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE3/"
         measurementUnit: Micrometres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: upper_mesh_size_um
       - measurementType: Lower mesh size
-        measurementTypeID:
+        measurementTypeID: "http://vocab.nerc.ac.uk/collection/P01/current/MSHSIZE2/"
         measurementUnit: Micrometres
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/UMIC/"
         sourceKey: lower_mesh_size_um
       - measurementType: Factors influencing
         measurementTypeID:
-        measurementUnit:
-        measurementUnitID:
+        measurementUnit: Not applicable
+        measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX/"
         sourceKey: factors_influencing_code
       - measurementType: Sample splitting
         measurementTypeID:
@@ -534,7 +540,7 @@ dwcaEmofContent:
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX/"
         sourceKey: classifier_created_by
       - measurementType: Quality flag
-        measurementTypeID: "http://vocab.nerc.ac.uk/collection/L27/current/SMHI_QC/"
+        measurementTypeID:
         measurementUnit: Not applicable
         measurementUnitID: "http://vocab.nerc.ac.uk/collection/P06/current/XXXX/"
         sourceKey: quality_flag
@@ -574,6 +580,8 @@ dwcaEmofContent:
       measurementDeterminedDate_IFCB:
         sourceKey:
       measurementDeterminedDate_SEAL:
+        sourceKey:
+      measurementDeterminedDate_ZB:
         sourceKey:
       measurementDeterminedBy:
         sourceKey: analysed_by
