--- a/dwca_config/field_mapping/dwca_terms_event.yaml
+++ b/dwca_config/field_mapping/dwca_terms_event.yaml
@@ -293,8 +293,16 @@ dwcaEventContent:
               sourceKey:
           minimumDepthInMeters:
               sourceKey: sample_min_depth_m
+          minimumDepthInMeters_ZB:
+              sourceKeyList: 
+                  - sample_min_depth_m
+                  - water_depth_m
           maximumDepthInMeters:
               sourceKey: sample_max_depth_m
+          maximumDepthInMeters_ZB:
+              sourceKeyList: 
+                  - sample_max_depth_m
+                  - water_depth_m
           decimalLatitude:
               sourceKeyList:
                   - sample_latitude_dd
