Dynamic lookup of shark-metadata
Directory "SHARK_METADATA" is replaced with the config dir from the
installed shark_metadata.

--- a/dwca_config/dwca_epibenthos_nat.yaml
+++ b/dwca_config/dwca_epibenthos_nat.yaml
@@ -80,7 +80,7 @@ transform:
 
 metadataSourceFiles:
     directory:
-        ../metadata/dcat_ap_se
+        SHARK_METADATA
     files:
         - titles.yaml
         - purpose.yaml
