--- a/dwca_config/dwca_adcp_nat.yaml
+++ b/dwca_config/dwca_adcp_nat.yaml
@@ -69,7 +69,7 @@ transform:
 
 metadataSourceFiles:
     directory:
-        ../metadata/dcat_ap_se
+        SHARK_METADATA
     files:
         - titles.yaml
         - purpose.yaml
