--- a/dwca_config/dwca_greyseal_nat.yaml
+++ b/dwca_config/dwca_greyseal_nat.yaml
@@ -73,7 +73,7 @@ transform:
 
 metadataSourceFiles:
     directory:
-        ../metadata/dcat_ap_se
+        SHARK_METADATA
     files:
         - titles.yaml
         - purpose.yaml
