--- a/dwca_config/dwca_jellyfish.yaml
+++ b/dwca_config/dwca_jellyfish.yaml
@@ -74,7 +74,7 @@ transform:
 
 metadataSourceFiles:
     directory:
-        ../metadata/dcat_ap_se
+        SHARK_METADATA
     files:
         - titles.yaml
         - purpose.yaml
